// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`estimate drift — totals per fixture > galley: total range snapshot 1`] = `
{
  "confirmedBandPct": 11,
  "displayedBandPct": 14,
  "high": 7436,
  "lines": [
    "fronts",
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 5599,
}
`;

exports[`estimate drift — totals per fixture > island: total range snapshot 1`] = `
{
  "confirmedBandPct": 10,
  "displayedBandPct": 12,
  "high": 5803,
  "lines": [
    "fronts",
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 4564,
}
`;

exports[`estimate drift — totals per fixture > l-shape: total range snapshot 1`] = `
{
  "confirmedBandPct": 14,
  "displayedBandPct": 17,
  "high": 7376,
  "lines": [
    "fronts",
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 5291,
}
`;

exports[`estimate drift — totals per fixture > peninsula: total range snapshot 1`] = `
{
  "confirmedBandPct": 10,
  "displayedBandPct": 13,
  "high": 8271,
  "lines": [
    "fronts",
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 6384,
}
`;

exports[`estimate drift — totals per fixture > single: total range snapshot 1`] = `
{
  "confirmedBandPct": 11,
  "displayedBandPct": 14,
  "high": 3897,
  "lines": [
    "fronts",
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 2938,
}
`;

exports[`estimate drift — totals per fixture > u-shape: total range snapshot 1`] = `
{
  "confirmedBandPct": 14,
  "displayedBandPct": 17,
  "high": 12026,
  "lines": [
    "fronts",
    "boards",
    "worktop",
    "backsplash",
    "edgeBanding",
    "hardware",
    "accessories",
    "lighting",
    "finishing",
    "design",
    "cnc",
    "assembly",
    "install",
  ],
  "low": 8592,
}
`;
